helm/apps/portfolio-tax-app/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-tax-app-frontend
  namespace: portfolio-tax-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-tax-app-frontend
  template:
    metadata:
      labels:
        app: portfolio-tax-app-frontend
    spec:
      containers:
        - name: frontend
          image: 192.168.1.243:5000/portfolio-tax-app-frontend:a63e92d1b22bc2e06a957f68efae17b7aaf619d4
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-tax-app-frontend
  namespace: portfolio-tax-app
spec:
  selector:
    app: portfolio-tax-app-frontend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
